move/PCI_8164.cs

/****************************************************************************/
/*  Copyright (c) 2011, ADLink Technology Inc.  All rights reserved.        */
/*                                                                          */
/*  File Name   :   PCI_8164.cs                                             */        
/*  Date        :   2011/6/10                                               */
/*  Programmer  :   Chang-Zhi Lin	                                          */
/****************************************************************************/


using System;
using System.Drawing;
using System.Collections;
using System.ComponentModel;
using System.Windows.Forms;
using System.Data;
using System.Runtime.InteropServices;


namespace Motion_W32
{
	public class Motion
	{
		
		//Initial
	 [DllImport("8164.dll")]public static extern Int16 _8164_initial(ref System.Int16 existCards);   
   //I16 FNTYPE _8164_int_enable(I16 CardNo,HANDLE *phEvent);	 
	 [DllImport("8164.dll")]public static extern Int16 _8164_int_disable(System.Int16 CardNo);


	 
	 [DllImport("8164.dll")]public static extern Int16 _8164_get_int_status(System.Int16 AxisNo, ref System.UInt32 error_int_status, ref System.UInt32 event_int_status);
	 //I16 FNTYPE _8164_link_interrupt(I16 CardNo,void ( __stdcall *callbackAddr)(I16 IntAxisNoInCard));	 
	 [DllImport("8164.dll")]public static extern Int16 _8164_set_auto_compare(System.Int16 AxisNo, System.Int16 SelectSrc);
	 [DllImport("8164.dll")]public static extern Int16 _8164_build_compare_function(System.Int16 AxisNo, System.Double Start, System.Double End, System.Double Interval, System.Int16 Device);
	 [DllImport("8164.dll")]public static extern Int16 _8164_build_compare_table(System.Int16 AxisNo, ref System.Double TableArray, System.Int32 Size, System.Int16 Device);
	 //I16 FNTYPE _8164_delay_time_mt(I16 AxisNo,F64 miniSecond, I32 Timeout_ms, HANDLE waitEvent);
   //I16 FNTYPE _8164_int_enableA(I16 CardNo,HANDLE *phEvent);
   [DllImport("8164.dll")]public static extern Int16 _8164_int_disableA(System.Int16 CardNo);
   [DllImport("8164.dll")]public static extern Int16 _8164_map_axis_event(System.Int16 AxisNo, System.Int16 EventNo, System.UInt32 IntFactor);


   [DllImport("8164.dll")]public static extern Int16 _8164_set_security_key(System.Int16 CardNo,System.UInt16 old_secu_code, System.UInt16 New_secu_code);
   [DllImport("8164.dll")]public static extern Int16 _8164_check_security_key(System.Int16 CardNo, System.UInt16 secu_code);
   [DllImport("8164.dll")]public static extern Int16 _8164_reset_security_key(System.Int16 CardNo);
   [DllImport("8164.dll")]public static extern Int16 _8164_set_user_code(System.Int16 CardNo, ref System.UInt16 DataArr, System.UInt16 ArrSize);
   [DllImport("8164.dll")]public static extern Int16 _8164_get_user_code(System.Int16 CardNo, ref System.UInt16 DataArr, System.UInt16 ArrSize);


   [DllImport("8164.dll")]public static extern Int16 _8164_int_control(System.UInt16 cardNo, System.UInt16 intFlag);
   [DllImport("8164.dll")]public static extern Int16 _8164_set_int_factor(System.Int16 AxisNo, System.UInt32 int_factor);
   [DllImport("8164.dll")]public static extern Int16 _8164_close();
   [DllImport("8164.dll")]public static extern Int16 _8164_get_irq_channel(System.UInt16 cardNo, ref System.UInt16 irq_no);
   [DllImport("8164.dll")]public static extern Int16 _8164_get_base_addr(System.UInt16 cardNo, ref System.UInt16 base_addr);
   [DllImport("8164.dll")]public static extern Int16 _8164_get_io_status(System.Int16 AxisNo, ref System.UInt16 io_sts);
   [DllImport("8164.dll")]public static extern Int16 _8164_motion_done(System.Int16 AxisNo);
   [DllImport("8164.dll")]public static extern Int16 _8164_get_position(System.Int16 AxisNo, ref System.Double pos);
   [DllImport("8164.dll")]public static extern Int16 _8164_set_position(System.Int16 AxisNo, System.Double pos);
   [DllImport("8164.dll")]public static extern Int16 _8164_get_command(System.Int16 AxisNo, ref System.Int32 cmd);
   [DllImport("8164.dll")]public static extern Int16 _8164_set_command(System.Int16 AxisNo, System.Int32 cmd);
   [DllImport("8164.dll")]public static extern Int16 _8164_get_error_counter(System.Int16 AxisNo, ref System.Int16 error);
   [DllImport("8164.dll")]public static extern Int16 _8164_reset_error_counter(System.Int16 AxisNo);
   [DllImport("8164.dll")]public static extern Int16 _8164_get_target_pos(System.Int16 AxisNo, ref System.Double pos);
   [DllImport("8164.dll")]public static extern Int16 _8164_reset_target_pos(System.Int16 AxisNo, System.Double pos);
   [DllImport("8164.dll")]public static extern Int16 _8164_get_current_speed(System.Int16 AxisNo,  ref System.Double speed);
   [DllImport("8164.dll")]public static extern Int16 _8164_get_rest_command(System.Int16 AxisNo, ref System.Int32 rest_command);
   [DllImport("8164.dll")]public static extern Int16 _8164_get_latch_data(System.Int16 AxisNo, System.Int16 LatchNo, ref System.Double pos);
   [DllImport("8164.dll")]public static extern Int16 _8164_check_rdp(System.Int16 AxisNo, ref System.Int32 rdp_command);
   [DllImport("8164.dll")]public static extern Int16 _8164_set_servo(System.Int16 AxisNo, System.Int16 on_off);
   [DllImport("8164.dll")]public static extern Int16 _8164_set_pls_outmode(System.Int16 AxisNo, System.Int16 pls_outmode);
   [DllImport("8164.dll")]public static extern Int16 _8164_set_pls_iptmode(System.Int16 AxisNo, System.Int16 pls_iptmode, System.Int16 pls_logic);
   [DllImport("8164.dll")]public static extern Int16 _8164_set_feedback_src(System.Int16 AxisNo, System.Int16 Src);
   [DllImport("8164.dll")]public static extern Int16 _8164_set_general_counter(System.Int16 AxisNo, System.Int16 CntSrc, System.Double CntValue);
   [DllImport("8164.dll")]public static extern Int16 _8164_get_general_counter(System.Int16 AxisNo, ref System.Double CntValue);
          

    // PCI-8164 Only
    [DllImport("8164.dll")]public static extern Int16 _8164_d_output(System.Int16 CardNo, System.Int16 Ch_No, System.Int16 value);
    [DllImport("8164.dll")]public static extern Int16 _8164_get_dio_status(System.Int16 CardNo, ref System.UInt16 dio_sts);
    [DllImport("8164.dll")]public static extern Int16 _8164_set_alm(System.Int16 AxisNo, System.Int16 alm_logic, System.Int16 alm_mode);
    [DllImport("8164.dll")]public static extern Int16 _8164_set_inp(System.Int16 AxisNo, System.Int16 inp_enable, System.Int16 inp_logic);
    [DllImport("8164.dll")]public static extern Int16 _8164_set_ltc_logic(System.Int16 AxisNo, System.Int16 ltc_logic);
    [DllImport("8164.dll")]public static extern Int16 _8164_set_pcs_logic(System.Int16 AxisNo, System.Int16 pcs_logic);
    [DllImport("8164.dll")]public static extern Int16 _8164_set_erc(System.Int16 AxisNo,System.Int16 erc_logic,System.Int16 erc_on_time);
    [DllImport("8164.dll")]public static extern Int16 _8164_set_sd(System.Int16 AxisNo, System.Int16 enable, System.Int16 sd_logic, System.Int16 sd_latch, System.Int16 sd_mode);
    [DllImport("8164.dll")]public static extern Int16 _8164_set_el(System.Int16 AxisNo, System.Int16 el_mode);
    [DllImport("8164.dll")]public static extern Int16 _8164_set_move_ratio(System.Int16 AxisNo, System.Double move_ratio);
    [DllImport("8164.dll")]public static extern Int16 _8164_set_sd_pin(System.Int16 AxisNo, System.Int16 Type);
    [DllImport("8164.dll")]public static extern Int16 _8164_set_home_config(System.Int16 AxisNo, System.Int16 home_mode, System.Int16 org_logic, System.Int16 ez_logic, System.Int16 ez_count, System.Int16 erc_out);
    [DllImport("8164.dll")]public static extern Int16 _8164_home_move(System.Int16 AxisNo, System.Double StrVel, System.Double MaxVel, System.Double Tacc);
    [DllImport("8164.dll")]public static extern Int16 _8164_pulser_vmove(System.Int16 AxisNo, System.Double SpeedLimit);
    [DllImport("8164.dll")]public static extern Int16 _8164_pulser_pmove(System.Int16 AxisNo, System.Double Dist, System.Double SpeedLimit);
    [DllImport("8164.dll")]public static extern Int16 _8164_pulser_home_move(System.Int16 AxisNo, System.Int16 HomeType, System.Double SpeedLimit);
    [DllImport("8164.dll")]public static extern Int16 _8164_set_pulser_iptmode(System.Int16 AxisNo, System.Int16 InputMode, System.Int16 Inverse);
    [DllImport("8164.dll")]public static extern Int16 _8164_backlash_comp(System.Int16 AxisNo, System.Int16 BCompPulse, System.Int16 Mode);
    [DllImport("8164.dll")]public static extern Int16 _8164_suppress_vibration(System.Int16 AxisNo, System.UInt16 ReverseTime, System.UInt16 ForwardTime);
    
    
